--- a/.github/workflows/build-user-config.yml
+++ b/.github/workflows/build-user-config.yml
@@ -1,29 +1,29 @@
 name: Reusable user config build
 
 on: [workflow_dispatch]
-on:
-  workflow_call:
-    inputs:
-      build_matrix_path:
-        description: "Path to the build matrix file"
-        default: "build.yaml"
-        required: false
-        type: string
-      config_path:
-        description: "Path to the config directory"
-        default: "config"
-        required: false
-        type: string
-      fallback_binary:
-        description: "Fallback binary format, if no *.uf2 file was built"
-        default: "bin"
-        required: false
-        type: string
-      artifact_name:
-        description: 'Artifact output file name'
-        default: 'firmware'
-        required: false
-        type: string
+  #on:
+  #workflow_call:
+  #  inputs:
+  #    build_matrix_path:
+  #      description: "Path to the build matrix file"
+  #      default: "build.yaml"
+  #      required: false
+  #      type: string
+  #    config_path:
+  #      description: "Path to the config directory"
+  #      default: "config"
+  #      required: false
+  #      type: string
+  #    fallback_binary:
+  #      description: "Fallback binary format, if no *.uf2 file was built"
+  #      default: "bin"
+  #      required: false
+  #      type: string
+  #    artifact_name:
+  #      description: 'Artifact output file name'
+  #      default: 'firmware'
+  #      required: false
+  #      type: string
 
 jobs:
   matrix:
