--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,16 @@
 name: Build
 on: [workflow_dispatch]
-on:
-  push:
-    paths:
-      - ".github/workflows/build.yml"
-      - "app/**"
-  pull_request:
-    paths:
-      - ".github/workflows/build.yml"
-      - "app/**"
-  schedule:
-    - cron: '22 4 * * *'
+  #on:
+  #  push:
+  #    paths:
+  #      - ".github/workflows/build.yml"
+  #      - "app/**"
+  #  pull_request:
+  #    paths:
+  #      - ".github/workflows/build.yml"
+  #      - "app/**"
+  #  schedule:
+  #    - cron: '22 4 * * *'
 
 jobs:
   build:
